Implemented DtoConvertable for UserProfile.java.